[package]
name = "geolocation"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = { version = "1", optional = true }

[features]
build-csv = ["csv"]

[[bin]]
name = "geoloc"
path = "src/main.rs"

[[bin]]
name = "geoloc-convert"
path = "src/convert.rs"
required-features = ["build-csv"]

[[bin]]
name = "geoloc-check"
path = "src/check.rs"
required-features = ["build-csv"]

[[bin]]
name = "geoloc-dummy"
path = "src/dummy.rs"
